<resources>
    <string name="app_name">Song List</string>
    <string name="add_song">Add Song</string>
    <string name="delete_song">Delete Song</string>
    <string name="exit_app">Exit App</string>
    <string name="enter_song_title">Enter Song Title</string>
    <string name="enter_band_name">Enter Band Name</string>
    <string name="enter_wiki_link">Enter Wiki Link</string>
    <string name="enter_video_link">Enter Video Link</string>
    <string name="enter_band_wiki_link">Enter Band\'s Wiki Link</string>
    <string name="view_video">View Video</string>
    <string name="view_songs_wiki">View Song\'s Wiki</string>
    <string name="view_bands_wiki">View Band\'s Wiki</string>
</resources>
